--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,35 +1,11 @@
-name: название шаблона
-description: описание шаблона
+name: Bug report
+description: Отчёт о дефекте
 title: "[Ошибка]: "
 labels: ["bug"]
 body:
   - type: textarea
-    id: идентификатор поля ввода
+    id: Title
     attributes:
-      label: подпись поля
-      description: описание
-      placeholder: подсказка
-    validations:
-      required: true #поле обязательно для заполнения
-  - type: dropdown
-    id: идентификатор поля ввода
-    attributes:
-      label: подпись поля
-      description: описание
-      options:
-       - список
-       - опций
+      label: Заголовок
     validations:
       required: true
-  - type: markdown
-    attributes:
-      value: |
-        Отобразить текст с разметкой markdown
-  - type: checkboxes
-    id: идентификатор поля ввода
-    attributes:
-      label: подпись
-      description: описание
-      options:
-      - label: флажок 1
-        required: true #флажок обязателен или нет
