--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -32,7 +32,7 @@ body:
       required: true
 
   - type: textarea
-    id:  Additional_materials
+    id: Additional_materials
     attributes:
       label: Скриншоты / Доп. материалы
       
@@ -56,7 +56,7 @@ body:
   - type: dropdown
     id: Severity
     attributes:
-      label: Сер
+      label: Серьёзность
       options:
        - Критическая
        - Высокая
